Cleanup add functionality

--- a/foh-switch-blueprint.yaml
+++ b/foh-switch-blueprint.yaml
@@ -73,7 +73,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "on" }'
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "release_2" }}'
                 sequence:
                   - repeat:
@@ -82,7 +82,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "release_3" }}'
                 sequence:
                   - repeat:
@@ -91,7 +91,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "on" }'
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_4" }}'
                 sequence:
                   - repeat:
@@ -100,7 +100,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_1_and_3" }}'
                 sequence:
                   - repeat:
@@ -109,14 +109,14 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "on" }'
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "on" }'
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_2_and_4" }}'
                 sequence:
                   - repeat:
@@ -125,18 +125,17 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
       - conditions: '{{ "press_" | string in trigger.payload_json.action }}'
         sequence:
-          - delay:
-              milliseconds: 250
+          - delay: !input "hold_delay"
           - choose:
               - conditions: '{{ trigger.payload_json.action == "press_1" }}'
                 sequence:
@@ -146,7 +145,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "press_2" }}'
                 sequence:
                   - repeat:
@@ -155,7 +154,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "press_3" }}'
                 sequence:
                   - repeat:
@@ -164,7 +163,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "press_4" }}'
                 sequence:
                   - repeat:
@@ -173,7 +172,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "press_1_and_3" }}'
                 sequence:
                   - repeat:
@@ -182,14 +181,14 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "press_2_and_4" }}'
                 sequence:
                   - repeat:
@@ -198,14 +197,14 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
       - conditions: >-
           {{ "release_" in trigger.payload_json.action and
           trigger.payload_json.elapsed | int > hold_delay }}
@@ -219,7 +218,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "release_2" }}'
                 sequence:
                   - repeat:
@@ -228,7 +227,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "release_3" }}'
                 sequence:
                   - repeat:
@@ -237,7 +236,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_4" }}'
                 sequence:
                   - repeat:
@@ -246,7 +245,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_1_and_3" }}'
                 sequence:
                   - repeat:
@@ -255,14 +254,14 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_2_and_4" }}'
                 sequence:
                   - repeat:
@@ -271,11 +270,11 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
