--- a/foh-switch-fancier-blueprint.yaml
+++ b/foh-switch-fancier-blueprint.yaml
@@ -87,8 +87,8 @@ condition:
 action:
   - variables:
       controller: !input "controller"
-      left_payload: !input "left_payload"
-      right_payload: !input "right_payload"
+      left_payload: !input left_payload
+      right_payload: !input right_payload
   - choose:
       - conditions: >-
           {{ "release_" in trigger.payload_json.action and
@@ -103,9 +103,9 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{{ states(left_payload.entity_id) }}'
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - action: input_select.select_next
-                    target: !input "left_payload"
+                    target: !input left_payload
                     data:
                       cycle: true
               - conditions: '{{ trigger.payload_json.action == "release_2" }}'
@@ -116,16 +116,25 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
-                      for_each: !input "left_lights"
-              - conditions: '{{ trigger.payload_json.action == "release_3" }}'
+                      for_each: !input left_lights
+                  - if:
+                      condition: '{{ not not left_payload }}'
+                      then:
+                        - action: input_select.select_first
+                          target: !input left_payload
+              - conditions: '{{ trigger.payload_json.action == "release_3" and not not right_payload }}'
                 sequence:
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input "right_lights"
+                            payload: '{{ states(right_payload.entity_id) }}'
+                      for_each: !input right_lights
+                  - action: input_select.select_next
+                    target: !input right_payload
+                    data:
+                      cycle: true
               - conditions: '{{ trigger.payload_json.action == "release_4" }}'
                 sequence:
                   - repeat:
@@ -134,23 +143,42 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
+                  - if:
+                      condition: '{{ not not right_payload }}'
+                      then:
+                        - action: input_select.select_first
+                          target: !input right_payload
               - conditions: '{{ trigger.payload_json.action == "release_1_and_3" }}'
                 sequence:
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
+                  - if:
+                      condition: '{{ not not left_payload }}'
+                      then:
+                        - repeat:
+                            sequence:
+                              - action: mqtt.publish
+                                data:
+                                  topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                                  payload: '{{ states(left_payload.entity_id) }}'
+                            for_each: !input left_lights
+                        - action: input_select.select_next
+                          target: !input left_payload
                           data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input "left_lights"
-                  - repeat:
-                      sequence:
-                        - action: mqtt.publish
+                            cycle: true
+                  - if:
+                      condition: '{{ not not right_payload }}'
+                      then:
+                        - repeat:
+                            sequence:
+                              - action: mqtt.publish
+                                data:
+                                  topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
+                                  payload: '{{ states(right_payload.entity_id) }}'
+                            for_each: !input right_lights
+                        - action: input_select.select_next
+                          target: !input right_payload
                           data:
-                            topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
-                            payload: '{ "state": "on" }'
-                      for_each: !input "right_lights"
+                            cycle: true
               - conditions: '{{ trigger.payload_json.action == "release_2_and_4" }}'
                 sequence:
                   - repeat:
@@ -159,18 +187,27 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
+                  - if:
+                      condition: '{{ not not left_payload }}'
+                      then:
+                        - action: input_select.select_first
+                          target: !input left_payload
+                  - if:
+                      condition: '{{ not not right_payload }}'
+                      then:
+                        - action: input_select.select_first
+                          target: !input right_payload
       - conditions: '{{ "press_" | string in trigger.payload_json.action }}'
         sequence:
-          - delay:
-              milliseconds: 250
+          - delay: !input "hold_delay"
           - choose:
               - conditions: '{{ trigger.payload_json.action == "press_1" }}'
                 sequence:
@@ -180,7 +217,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "press_2" }}'
                 sequence:
                   - repeat:
@@ -189,7 +226,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "press_3" }}'
                 sequence:
                   - repeat:
@@ -198,7 +235,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "press_4" }}'
                 sequence:
                   - repeat:
@@ -207,7 +244,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "press_1_and_3" }}'
                 sequence:
                   - repeat:
@@ -216,14 +253,14 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": 40 }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "press_2_and_4" }}'
                 sequence:
                   - repeat:
@@ -232,14 +269,14 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": -40 }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
       - conditions: >-
           {{ "release_" in trigger.payload_json.action and
           trigger.payload_json.elapsed | int > hold_delay }}
@@ -253,7 +290,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "release_2" }}'
                 sequence:
                   - repeat:
@@ -262,7 +299,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
               - conditions: '{{ trigger.payload_json.action == "release_3" }}'
                 sequence:
                   - repeat:
@@ -271,7 +308,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_4" }}'
                 sequence:
                   - repeat:
@@ -280,7 +317,7 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_1_and_3" }}'
                 sequence:
                   - repeat:
@@ -289,14 +326,14 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
               - conditions: '{{ trigger.payload_json.action == "release_2_and_4" }}'
                 sequence:
                   - repeat:
@@ -305,11 +342,22 @@ action:
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "left_lights"
+                      for_each: !input left_lights
                   - repeat:
                       sequence:
                         - action: mqtt.publish
                           data:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: "{ \"brightness_move\": \"stop\" }"
-                      for_each: !input "right_lights"
+                      for_each: !input right_lights
+  - delay: !input cycle_delay
+  - if:
+      condition: '{{ not not left_payload }}'
+      then:
+        - action: input_select.select_first
+          target: !input left_payload
+  - if:
+      condition: '{{ not not right_payload }}'
+      then:
+        - action: input_select.select_first
+          target: !input right_payload
