--- a/foh-switch-fancier-blueprint.yaml
+++ b/foh-switch-fancier-blueprint.yaml
@@ -95,7 +95,7 @@ action:
           trigger.payload_json.elapsed | int < hold_delay }}
         sequence:
           - choose:
-              - conditions: '{{ trigger.payload_json.action == "release_1" and not not left_payload }}'
+              - conditions: '{{ trigger.payload_json.action == "release_1" and left_payload is defined }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -117,11 +117,11 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
                       for_each: !input left_lights
-                  - if: '{{ not not left_payload }}'
+                  - if: '{{ left_payload is defined }}'
                     then:
                       - action: input_select.select_first
                         target: !input left_payload
-              - conditions: '{{ trigger.payload_json.action == "release_3" and not not right_payload }}'
+              - conditions: '{{ trigger.payload_json.action == "release_3" and right_payload is defined }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -143,13 +143,13 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
                       for_each: !input right_lights
-                  - if: '{{ not not right_payload }}'
+                  - if: '{{ right_payload is defined }}'
                     then:
                       - action: input_select.select_first
                         target: !input right_payload
               - conditions: '{{ trigger.payload_json.action == "release_1_and_3" }}'
                 sequence:
-                  - if: '{{ not not left_payload }}'
+                  - if: '{{ left_payload is defined }}'
                     then:
                       - repeat:
                           sequence:
@@ -162,7 +162,7 @@ action:
                         target: !input left_payload
                         data:
                           cycle: true
-                  - if: '{{ not not right_payload }}'
+                  - if: '{{ right_payload is defined }}'
                     then:
                       - repeat:
                           sequence:
@@ -191,11 +191,11 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
                       for_each: !input right_lights
-                  - if: '{{ not not left_payload }}'
+                  - if: '{{ left_payload is defined }}'
                     then:
                       - action: input_select.select_first
                         target: !input left_payload
-                  - if: '{{ not not right_payload }}'
+                  - if: '{{ right_payload is defined }}'
                     then:
                       - action: input_select.select_first
                         target: !input right_payload
@@ -345,11 +345,11 @@ action:
                             payload: "{ \"brightness_move\": \"stop\" }"
                       for_each: !input right_lights
   - delay: !input cycle_delay
-  - if: '{{ not not left_payload }}'
+  - if: '{{ left_payload is defined }}'
     then:
       - action: input_select.select_first
         target: !input left_payload
-  - if: '{{ not not right_payload }}'
+  - if: '{{ right_payload is defined }}'
     then:
       - action: input_select.select_first
         target: !input right_payload
