--- a/foh-switch-fancier-blueprint.yaml
+++ b/foh-switch-fancier-blueprint.yaml
@@ -96,7 +96,7 @@ action:
           trigger.payload_json.elapsed | int < hold_delay }}
         sequence:
           - choose:
-              - conditions: '{{ trigger.payload_json.action == "release_1" and left_payload is defined }}'
+              - conditions: '{{ trigger.payload_json.action == "release_1" and not not left_payload }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -118,11 +118,11 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
                       for_each: !input left_lights
-                  - if: '{{ left_payload is defined }}'
+                  - if: '{{ not not left_payload }}'
                     then:
                       - action: input_select.select_first
                         target: !input left_payload
-              - conditions: '{{ trigger.payload_json.action == "release_3" and right_payload is defined }}'
+              - conditions: '{{ trigger.payload_json.action == "release_3" and not not right_payload }}'
                 sequence:
                   - repeat:
                       sequence:
@@ -144,13 +144,13 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
                       for_each: !input right_lights
-                  - if: '{{ right_payload is defined }}'
+                  - if: '{{ not not right_payload }}'
                     then:
                       - action: input_select.select_first
                         target: !input right_payload
               - conditions: '{{ trigger.payload_json.action == "release_1_and_3" }}'
                 sequence:
-                  - if: '{{ left_payload is defined }}'
+                  - if: '{{ not not left_payload }}'
                     then:
                       - repeat:
                           sequence:
@@ -163,7 +163,7 @@ action:
                         target: !input left_payload
                         data:
                           cycle: true
-                  - if: '{{ right_payload is defined }}'
+                  - if: '{{ not not right_payload }}'
                     then:
                       - repeat:
                           sequence:
@@ -192,11 +192,11 @@ action:
                             topic: '{{ "zigbee2mqtt/" ~ repeat.item ~ "/set" }}'
                             payload: '{ "state": "off" }'
                       for_each: !input right_lights
-                  - if: '{{ left_payload is defined }}'
+                  - if: '{{ not not left_payload }}'
                     then:
                       - action: input_select.select_first
                         target: !input left_payload
-                  - if: '{{ right_payload is defined }}'
+                  - if: '{{ not not right_payload }}'
                     then:
                       - action: input_select.select_first
                         target: !input right_payload
@@ -204,11 +204,11 @@ action:
         sequence:
           - if: '{{ trigger.payload_json.elapsed | int >= cycle_delay }}'
             then:
-              - if: '{{ left_payload is defined }}'
+              - if: '{{ not not left_payload }}'
                 then:
                   - action: input_select.select_first
                     target: !input left_payload
-              - if: '{{ right_payload is defined }}'
+              - if: '{{ not not right_payload }}'
                 then:
                   - action: input_select.select_first
                     target: !input right_payload
